fix: increase max-height for section to improve content visibility

--- a/chamber/styles/discover-base.css
+++ b/chamber/styles/discover-base.css
@@ -91,7 +91,7 @@ section{
     /* gap: 2em; */
 
     overflow: hidden;
-    max-height: 22em;
+    max-height: 25em;
     transition: max-height 0.5s ease-out;
 }
 
